src/components/layout/layout.scss
@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");

:root {
  background-color: var(--bg-colour);
}
// PHONE VIEW LARGE

@media (max-width: 850px) {
  .header {
    .navbar-container {
      grid-column: 1 / span 2;
      grid-row: 2;
    }

    .toggle-container {
      justify-self: center;
      width: fit-content;
    }

    grid-template-columns: 99fr 1fr;
  }

  .layout-container {
    width: 90vw;
  }
}

// PHONE VIEW SMALL
@media (max-width: 425px) {
  .header {
    h1 {
      font-size: x-large;
    }
  }
  footer {
    text-align: center;
  }
}

// WIDE VIEW
@media (min-width: 851px) {
  .layout-container {
    width: 65vw;
  }

  .header {
    grid-template-columns: 25fr 70fr 10fr;
  }
}

.layout-wrapper {
  display: flex;
  justify-content: center;
  font-family: "Montserrat", sans-serif;
  color: var(--text-colour);
}

.header {
  display: grid;
  .toggle-container {
    justify-self: end;
  }
  .navbar-container {
    justify-items: end;
  }
  align-items: center;
  a {
    color: var(--accent-colour);
    transition: color 1s;
  }
  grid-gap: 1em;
}

a {
  text-decoration: none;
}

main {
  background-color: var(--content-bg-colour);
  padding: 1.45em;
  color: var(--text-colour);
}

footer {
  margin: 1rem 0rem 0rem;
  color: var(--text-colour);
}

@media (prefers-color-scheme: light) {
  body.light {
    --bg-colour: #dddddd;
    --text-colour: #1b1b1b;
    --content-bg-colour: #eeeeee;
    background-color: var(--bg-colour);
  }
}

@media (prefers-color-scheme: dark) {
  body.dark {
    --bg-colour: #1b1b1b;
    --text-colour: white;
    --content-bg-colour: #303030;
    background-color: var(--bg-colour);
  }
}

body.light {
  --bg-colour: #dddddd;
  --text-colour: #1b1b1b;
  --content-bg-colour: #eeeeee;
  --dark-mode-display: none;
  --accent-colour: #7c83ff;
  background-color: var(--bg-colour);
}

body.dark {
  --bg-colour: #1b1b1b;
  --text-colour: white;
  --content-bg-colour: #303030;
  --light-mode-display: none;
  --accent-colour: #a0a5ff;
  background-color: var(--bg-colour);
}

body {
  transition: all 1s;
  main {
    transition: background-color 1s, color 1s;
  }
  footer {
    transition: color 1s;
  }

  /* Hide scrollbar for IE and Edge */
  -ms-overflow-style: none;
}

/* Hide scrollbar for Chrome, Safari and Opera */
body::-webkit-scrollbar {
  display: none;
}

.toggle-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.dark-mode-exclusive {
  display: var(--dark-mode-display);
}

.light-mode-exclusive {
  display: var(--light-mode-display);
}

html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}

